Testnet preparations (#51)
* Replaced Swagger UI with Scalar

* Single DEB package

* Adjusted emission curve

* Removed unused settings

* Accecpt raw bytes in transactions/broadcast

* Accept scalars in config

* Genesis settings

* fixed mnemonic quoting

* Docker image fixes

* bumped scala version